# data-engineering-spotify

./: README.md  SpotifyDataETL.py  pyproject.toml
data_engineering_spotify/: etl_to_excel.ipynb  etl_to_s3_bucket.py
